--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "homepage": "https://Rajveer070.github.io/Expensify",
   "devDependencies": {
     "gh-pages": "^6.1.1"
+  },
+  "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   }
 }
